--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,19 @@
 @tailwind base;
+html, body {
+  overscroll-behavior-x: none;
+  /* overscroll-behavior-y: none; */
+}
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: black;
+}
+
+body > div {
+  height: 100%;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
+}
 @tailwind components;
 @tailwind utilities;
