--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,12 +16,16 @@ html, body {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  max-width: 1260px;
+  margin: auto !important;
+
   font-family:
   "Chicago",
   "Helvetica Neue",
   Helvetica,
   Arial,
   sans-serif;
+
 }
 
 body {
