--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,30 +8,23 @@
 
 @tailwind base;
 
-html, body {
+html,
+body {
   overscroll-behavior-x: none;
   /* overscroll-behavior-y: none; */
 }
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  max-width: 1260px;
-  margin: auto !important;
-
-  font-family:
-  "Chicago",
-  "Helvetica Neue",
-  Helvetica,
-  Arial,
-  sans-serif;
-
+  font-family: "Chicago", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 body {
   background-image: url(/macpattern.png);
   background-size: 4px 4px;
-  
+  margin: auto;
 }
 
 body > div {
@@ -39,5 +32,23 @@ body > div {
   overflow: scroll;
   -webkit-overflow-scrolling: touch;
 }
+
+
+@media screen and (min-width: 1920px) {
+  body {
+    width: 1890px;
+  }
+}
+@media screen and (min-width: 3840px) {
+  body {
+    width: 3810px;
+  }
+}
+
+* {
+  white-space: normal;
+word-wrap: break-word;
+}
+
 @tailwind components;
 @tailwind utilities;
