--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  font-family: "Chicago", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Chicago", "Helvetica Neue", Helvetica, Arial, sans-serif, serif;
 }
 
 body {
